--- a/vignettes/birdnetr.Rmd
+++ b/vignettes/birdnetr.Rmd
@@ -10,7 +10,8 @@ vignette: >
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  eval = FALSE
 )
 ```
 
@@ -26,7 +27,7 @@ The birdnetR package provides a comprehensive interface for utilizing the BirdNE
 
 First, install the `reticulate` package if you haven't already:
 
-```{r install_reticulate, eval=FALSE}
+```{r install_reticulate}
 install.packages("reticulate")
 ```
 
@@ -34,18 +35,18 @@ For now, you have to install the package from GitHub.
 
 To install the package directly from GitHub, you need to have the devtools package installed. If you don't have devtools installed, you can install it using:
 
-```{r install_devtools, eval=FALSE}
+```{r install_devtools}
 install.packages("devtools")
 ```
 
 Then, you can install `birdnetR` from GitHub:
 
-```{r install_birdnetR, eval=FALSE}
+```{r install_birdnetR}
 devtools::install_github("birdnet-team/birdnetR")
 ```
 
 Next, install `birdnet`, which will set up a Python virtual environment named `r-birdnet` by default. You can configure this with the envname parameter. Do this only once during the initial setup or if you encounter issues with the environment.
-```{r load_and_install_birdnet, eval=FALSE}
+```{r load_and_install_birdnet}
 library(birdnetR)
 install_birdnet()
 
@@ -71,16 +72,15 @@ model <- init_model()
 audio_path <- system.file("extdata", "soundscape.wav", package = "birdnetR")
 
 # Predict species within the audio file
-predictions <- predict_species(model, audio_path, min_confidence = 0.3, keep_empty = TRUE)
+predict_species(model, audio_path, min_confidence = 0.3, keep_empty = TRUE)
 
-predictions
 ```
 
 If there are multiple predictions above the confidence threshold within the same time interval, you will see multiple rows for that interval. To filter and keep only the most probable prediction per interval, you can use the convenience function provided in the package.
 
 ```{r top_predictions}
-top_predictions <- get_top_prediction(predictions)
-top_predictions
+get_top_prediction(predictions)
+
 ```
 
 
@@ -88,7 +88,7 @@ top_predictions
 You may not always need to identify all 6,000+ species available in the model. To focus on species relevant to your project, you can use a custom species list containing only the necessary class labels.
 
 Class labels follow a specific format, consisting of the scientific name and the common name, separated by an underscore, like this:
-```{r class_label_example, eval=FALSE}
+```{r class_label_example}
 "Accipiter cooperii_Cooper's Hawk"
 "Agelaius phoeniceus_Red-winged Blackbird"
 ```
@@ -96,7 +96,7 @@ Class labels follow a specific format, consisting of the scientific name and the
 
 To create a custom species list, ensure each class label is on a separate line in a `.txt` file. You can refer to the example included in this package or check out the full list of species that BirdNET was trained on.
 
-```{r label_file_paths, eval=FALSE}
+```{r label_file_paths}
 # Path to the label file including all BirdNET classes
 # use this file as a template to create your custom species list but don't change it. 
 get_labels_path(language = "en_us")
@@ -128,12 +128,9 @@ BirdNET includes a Meta Model that can predict the occurrence of bird species at
 ```{r use_meta_model}
 # predict species occurrence in Ithaca, NY
 predicted_species <- predict_species_at_location_and_time(model, latitude = 42.5, longitude = -76.45, week = 4)
-predicted_species
 
 # Predict using the predicted class labels only
 predict_species(model, audio_path, filter_species = predicted_species$label, min_confidence = 0.3, keep_empty = FALSE)
-
-
 ```
 
 For more detailed information, refer to the help file: `?predict_species_at_location_and_time`.
@@ -149,7 +146,7 @@ available_languages()
 
 To output the common names in your preferred language, initialize the model with the language parameter set to your desired language code:
 ```{r}
-model <- init_model(language = "fr")
+init_model(language = "fr")
 ```
 
 If you want to view the class labels in a specific language, you can retrieve and inspect them using these commands:
@@ -157,7 +154,7 @@ If you want to view the class labels in a specific language, you can retrieve an
 ```{r labels_language}
 
 labels_path_lang <- get_labels_path(language = "fr")
-labels_lang <- get_species_from_file(labels_path_lang) 
-head(labels_lang)
+get_species_from_file(labels_path_lang) 
+
 ```
  
